@@ -1,6 +1,6 @@
 /*
- *      Copyright (C) 2006, 2008, 2009 Free Software Foundation, Inc.
- *      Copyright (C) 2002, 2005 Fabio Fiorina
+ * Copyright (C) 2002, 2005, 2006, 2008, 2009, 2010 Free Software
+ * Foundation, Inc.
  *
  * This file is part of LIBTASN1.
  *
