@@ -1,6 +1,6 @@
 /*
- * Copyright (C) 2004, 2005, 2006, 2007, 2008, 2009 Free Software Foundation
- * Copyright (C) 2002 Fabio Fiorina
+ * Copyright (C) 2002, 2004, 2005, 2006, 2007, 2008, 2009, 2010 Free
+ * Software Foundation, Inc.
  *
  * This file is part of LIBTASN1.
  *
@@ -45,7 +45,7 @@ extern "C"
 {
 #endif
 
-#define ASN1_VERSION "2.3"
+#define ASN1_VERSION "2.4"
 
   typedef int asn1_retCode;	/* type returned by libtasn1 functions */
 
