@@ -10,6 +10,8 @@ See the end for copying conditions.
 
 ** Update many gnulib files.
 
+** minitasn1: Internal copy upgraded to GNU Libtasn1 v2.4.
+
 ** API and ABI modifications:
 No changes since last version.
 
